# market-sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
docker/postgres/: init.sql
src/: ingestion.py  main.py  pipeline.py  utils.py
src/database/: client.py
test/: test_db.py
